# sg-learn

./: .gitignore  README.md  all_code.py  classifier.py  constants.py  driver.py  experiment_2.py  find_weird_stuff.py  historical.py  learner.py  main_experiment.py  minimize_history.py  minimizer.py  not_working.py  parameters.py  proto_model.py  pyproject.toml  pyproject.toml~  relations_1.py  relations_3.py  relations_4.py  script_enabled_version.ipynb  sg-learn-nil4  sg-learn-nil4.ipynb  sgLearnNil4.ipynb  sg_learn_nil4.ipynb  sg_model.py  sgnet_process.py  utils.py
sg_learn/: classifier.py  constants.py  driver.py  experiment_2.py  find_weird_stuff.py  historical.py  learner.py  main_experiment.py  minimize_history.py  minimizer.py  not_working.py  output_layer_2d.py  output_layer_scalar.py  parameters.py  prepare_input_layer.py  proto_model.py  relations_1.py  relations_2.py  relations_3.py  relations_4.py  sg_model.py  sgnet_global.py  sgnet_local.py  sgnet_process.py  symmetric_group.py  utils.py
